<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EarPhone Key Set</string>
    <string name="service_describe">Open this service to enable three key earphone\nChange music by press up or down key.\nAdvanced Functions need also give the root permission!</string>
    <string name="app_describe">This application will enable three key earphone change music by press up or down key.</string>
    <string name="guide_title">Please Set These Before You Use!</string>
    <string name="guide_check">Correct Your EarPhone</string>
    <string name="guide_check_up">Click the button on your earphone which means volume UP</string>
    <string name="guide_check_down">Click the button on your earphone which means volume DOWN</string>
    <string name="guide_check_error">You may click a wrong button.\nCurrent Key:</string>
    <string name="guide_first_text">Must:Run the AccessibilityService</string>
    <string name="guide_second_text">Choose:Give Root Permission</string>
    <string name="guide_first_text_button">Run</string>
    <string name="guide_second_text_button">Give</string>
    <string name="service_run">Accessibility Service is running!</string>
    <string name="device_no_root">You must root your device before you use it!</string>
    <string name="reset_earphone">Reset EarPhone</string>
    <string name="reset_earphone_error">Please close the AccessibilityService first.</string>
    <string name="attention_title">Attentions</string>
    <string name="attention_msg">1.When you close the screen, the physical key which control volume will change music instead.\n\n2.We will not change any files in System after being given ROOT Permission.</string>
    <string name="advanced_button">Advanced</string>
    <string name="advanced_title">Change Volume Button on EarPhone By Custom</string>
    <string name="advanced_up">Volume +:</string>
    <string name="advanced_down">Volume -:</string>
    <string name="advanced_list">KeyCode List</string>
    <string name="advanced_wrong">KeyCode can not be empty!</string>
    <string name="advanced_longpress_send">Stimulate Long Press Event</string>
    <string name="advanced_longpress_get">Only Change When You Long Pressed Physical Button</string>
    <string name="advanced_longpress_custom">Custom Event Work When Long Press\n(Short Press Will Still Change Music)</string>
    <string name="advanced_attention">Attention:The Long Press Button Function Can Not Use When You Close Screen!</string>
    <string name="earphone_not_found">Please insert your earphone before setting!</string>
    <string name="correct_device">Please set earphone device before use!</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="exit">Exit</string>
    <string name="author">Made by XFY9326\nhttps://github.com/XFY9326/EarPhoneKeySet</string>
    <string name="keycode">KeyCode</string>
    <string name="guide_check_special_key">Key Check Wrong?</string>
    <string name="guide_check_special_key_description">In some device, earphone key may be set as different functions.\n\nYou can still set this key as a music control key.\n\nThis may cause problems and you need know first!\n\nNow you can click Done button to set different earphone key!</string>
</resources>
